Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26583

Incorrect behaviour of cancel operation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 5.0.0
    • Location: Places
    • None
    • 3ffb9737a56cf81dd42e6ffa5489fe12cf8d2971

    Description

      The cancel operation always reverts the model back into the null state, but does not touch the model data. The null state is meant to indicate a model in a pristine state with no data or ongoing operations.

      Instead the behavior should be that cancel should transition into the Ready state and that existing data in the model, prior to the operation is retained.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            abcd abcd (closed Nokia identity) (Inactive)
            abcd abcd (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes