Fix behavior of the cancel operation

Previously calling cancel would always set the state to the Null
state.  Instead calling cancel should transition to the
Ready state.

Also in the PlaceSearchModel tests, ensure each test function
has a pristine model by dynamically creating the PlaceSearchModel,
rather than using the same one declared in QML.

Task-number: QTBUG-26583

Change-Id: I43e4caab5e58700a8725cf52b8ff22364995b03b
Reviewed-by: Aaron McCarthy <aaron.mccarthy@nokia.com>